--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="Languange">Languange</string>
     <string name="Desc">Description</string>
     <string name="fav">Favorite</string>
+    <string name="get_rating">%s/10 IMDb</string>
+    <string name="get_duration">%s Minutes</string>
+    <string name="get_username">Welcome, %s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="editprofile">Edit Profile</string>
